            as it is no longer available starting from OTP 25.

2022/05/20: Relx has been updated to v4. Relx v4 is no longer
            an escript, therefore breaking changes were
            introduced. The `RELX`, `RELX_URL` and `RELX_OPTS`
            variables were removed. The `relx` project must
            be added as a `DEPS`, `BUILD_DEPS` or `REL_DEPS`
            dependency to enable building releases. For example:
            `REL_DEPS = relx`. Relx itself has had some
            additional changes: the `start` command has
            been replaced by `daemon`, and configuration
            defaults have changed so that you may need
            to add the following to your relx.config file:

            ``` erlang
            {dev_mode, false}.
            {include_erts, true}.
            ```

2022/05/31: Xref support has been rewritten. Erlang.mk no
            longer uses the xref_runner, instead implementing
            its own interface. This new interface is more
            flexible and more powerful: it supports both
            checks and informational analyses as well as
            the Xref query functions that use the powerful
            Xref language to perform custom queries. Erlang.mk
            can also run analyses and queries against all
            dependencies as well as Erlang/OTP applications.

2023/05/12: Rebar3 is now used for autopatch instead of
            Rebar2. `make distclean` or `rm -rf .erlang.mk`
            might be required after updating Erlang.mk.
            Moving to Rebar3 increases compatibility now
            that few maintained projects are using Rebar2.
            For compatibility reasons the variables to
            point to a different rebar are now REBAR3_GIT
            and REBAR3_COMMIT.

2023/05/12: A number of broken packages have been removed.
            They were all unmaintained and there's a low
            chance that this will break anyone's project.